[gd_scene load_steps=2 format=3 uid="uid://duetgj7r042g6"]

[ext_resource type="Script" path="res://Scenes/Menus/level_select_screen.gd" id="1_42v5v"]

[node name="Level Select Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42v5v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Test Level" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Test Level
"

[node name="Level 1" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1
"

[node name="Back" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Go Back
"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Test Level" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
